2005-12-04  David Reveman  <davidr@novell.com>

	* src/cairo-glitz-surface.c (_cairo_glitz_surface_get_image): 
	(_cairo_glitz_surface_set_image): 
	(_cairo_glitz_surface_add_glyph): Set fourcc.

2005-11-30  David Reveman  <davidr@novell.com>

	* src/cairo-glitz-surface.c (_cairo_glitz_pattern_acquire_surface): 
	Track changes to glitz.

2005-11-21  Carl Worth  <cworth@cworth.org>

	* src/pixman-remap.h: Remove duplicate definitions of
	pixman_color_to_pixel and pixman_composite.

2005-11-21  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Add reminder to fix all memory leaks (as determined by
	the test suite) before release 1.2.0.

	* src/cairo-gstate.c: (_cairo_gstate_stroke),
	(_cairo_gstate_fill): Patch leak of patterns as noted in bug #5100
	(thanks to Richard Stellingwerff <remenic@gmail.com>).

2005-11-18  Carl Worth  <cworth@cworth.org>

	* src/pixman-remap.h: Remove spurios INT_ prefixes which break the
	build with very recent binutils.

2005-11-17  Stuart Parmenter <pavlov@pavlov.net>

	* test/cairo-test.c: (create_win32_surface),
	(cleanup_win32), (cairo_test_expecting):
	Hooked up tests to run on Windows with a Windows surface

2005-11-14  Anders Carlsson  <andersca@imendio.com>

        * src/cairo-quartz-surface.c:
        (_cairo_quartz_surface_release_dest_image):
        If the surface is flipped, flip the CG coordinate system
        before drawing the images.

        (cairo_quartz_surface_create):
        * src/cairo-quartz.h:
        Add "flipped" argument to cairo_quartz_surface_create.

2005-11-10  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Change scheduled release date of 1.2.0 out to
	2005-12-15.

2005-11-08  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that PS is now passing all tests except for
	self-copy.
	
	* src/cairo-ps-surface.c: (_cairo_ps_surface_paint),
	(_cairo_ps_surface_mask), (_cairo_ps_surface_stroke),
	(_cairo_ps_surface_fill), (_cairo_ps_surface_show_glyphs),
	(_ps_output_paint), (_ps_output_mask), (_ps_output_stroke),