@@ -1,3 +1,8 @@
+2005-12-05  David Reveman  <davidr@novell.com>
+
+	* src/cairo-glitz-surface.c (_cairo_glitz_pattern_acquire_surface): 
+	Set gradient stop parameters correctly.
+
 2005-12-04  David Reveman  <davidr@novell.com>
 
 	* src/cairo-glitz-surface.c (_cairo_glitz_surface_get_image): 
